# mcu_log_debugger

./: .gitignore  BUILD_GUIDE.md  BUTTON_FUNCTIONALITY_CHECK.md  CHANGELOG_v1.0.1.md  LOG_PROTOCOL.md  NEW_MESSAGE_ANIMATION.md  PUSH_TO_GITHUB.md  README.md  RELEASE_v1.0.1.md  SEARCH_HIGHLIGHT_FEATURE.md  TESTING_CHECKLIST_v1.0.1.md  TESTING_QUICKSTART.md  UI_UX_POLISH.md  add_rounded_corners.py  custom-dropdown-example.html  package-lock.json  package.json  requirements.txt  setup_test_env.sh  test_log_simulator.py
.claude/: settings.local.json
.github/workflows/: build-windows.yml  build.yml  release.yml
docs/releases/: index.json
docs/v1.0.0/: CROSS_COMPILE_WINDOWS.md  PROTOCOL_COMPLIANCE.md  QUICK_REFERENCE.md  RELEASE_NOTES.md  TEST_GUIDE.md  VIRTUAL_PORT_SETUP.md
docs/v1.0.1/: FEATURE_REVIEW.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TECHNICAL_DETAILS.md  UI_IMPROVEMENTS.md  VIEW_LOCK_FEATURE.md
docs/v1.0.2/: CHANGELOG.md  FEATURE_DETAILS.md  README.md  RELEASE_NOTES.md  SUMMARY.md  TESTING_CHECKLIST.md
docs/v2.0.0-beta/: RELEASE_NOTES.md  todo.md
docs/v2.0.2/: RELEASE_NOTES.md
docs/测试/: macOS_虚拟串口测试指南.md
public/: app.js  index.html  main.js  style.css
public/src/app/: bootstrap.js  events.js
public/src/core/: state.js  (+1 more)
public/styles/: base.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  serial.rs  settings.rs  storage.rs
src-tauri/src/models/: serial.rs
src-tauri/src/services/serial/: mod.rs
src-tauri/src/state/: mod.rs  serial_state.rs
(+43 files in other folders)
