[package]
name = "mcu-log-debugger"
version = "2.0.2"
description = "MCU Log Debugger - 串口日志调试助手"
authors = ["MCU Log Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "path-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
